<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/username"
                android:id="@+id/usernameTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/usernamePlainText"
                android:inputType="text"
                android:ems="10"/>
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/password"
                android:id="@+id/passwordTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/passwordPlainText"
                android:inputType="textPassword"
                android:ems="10"/>
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/confirm_password"
                android:id="@+id/confirmPasswordTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/confirmPasswordPlainText"
                android:inputType="textPassword"
                android:ems="10"/>
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/address"
                android:id="@+id/addressTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/addressPlainText"
                android:inputType="text"
                android:ems="10"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:layout_height="match_parent"
                android:layout_width="130dp"
                android:text="@string/register"
                android:id="@+id/RegisterButton"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>