<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/name"
                android:id="@+id/productNameTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/productNamePlainText"
                android:inputType="text"
                android:ems="10"/>
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/cost"
                android:id="@+id/productCostTextView"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/productCostPlainText"
                android:inputType="numberDecimal"
                android:ems="10"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:layout_height="match_parent"
                android:layout_width="130dp"
                android:text="@string/edit"
                android:id="@+id/editButton"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>